made changes to header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="flex-container"> 
-        <div class="first">
+    <div class="first">
             <div class="header">
                 <div class="logo">Header Logo</div> 
-                <div class="links">header link one header link two header link three</div>
+                <div class="links">header link three</div>
+                <div class="links">header link two</div>
+                <div class="links">header link one</div>
             </div>
             <div class="main">
                 This website is awesome
@@ -31,8 +32,8 @@
             <div>Call to action its time</div>
             <div>Sign up for our product by clicking that button over there</div>
             <div class="button">Sign up</div>
-        </div>
-
     </div>
+
+
 </body>
 </html>
