added CSS rules for the first block

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="links">header link one</div>
             </div>
             <div class="main">
-                This website is awesome
+                <p class="title">This website is awesome</p>
                 This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
             </div>
             <div class="button">Sign up</div>
