redisigned everything: fixed first block

--- a/index.html
+++ b/index.html
@@ -8,32 +8,35 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="first">
-            <div class="header">
-                <div class="logo">Header Logo</div> 
-                <div class="links">header link three</div>
-                <div class="links">header link two</div>
-                <div class="links">header link one</div>
-            </div>
-            <div class="main">
-                <p class="title">This website is awesome</p>
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-            </div>
-            <div class="button">Sign up</div>
+    
+        <div class="first">
+                <div class="head">
+                    <div class="flex-container">
+                    <div class="logo">Header Logo</div> 
+                    <div class="links">header link three</div>
+                    <div class="links">header link two</div>
+                    <div class="links">header link one</div>
+                    </div>
+                </div>
+                <div class="main">
+                    <div class="flex-container">
+                        <div class="text">
+                            <h1>This website is awesome</h1>
+                            <p class="text-main">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                            <div class="button">Sign up</div>
+                        </div>
+                    <div class="placeholder">this is a placeholder for an image</div>
+                </div>
+                </div>
+                
         </div>
-        <div class="second">
-            Some random information.
-        </div>
-        <div class="third">
-            This is an inspiring quote, or a testimonial from a customer.
-            Maybe...
-        </div>
-        <div class="fourth">
-            <div>Call to action its time</div>
-            <div>Sign up for our product by clicking that button over there</div>
-            <div class="button">Sign up</div>
-    </div>
 
+    <div class="second">
+    </div>
+    <div class="third">
+    </div>
+    <div class="fourth">
+    </div>
 
 </body>
 </html>
