fixed second div

--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
         </div>
 
     <div class="second">
+    <div class="second-text">Some random information.</div>
+    <div class="flex-container">
+        <div class="section">
+            <div class="square"></div>
+            <div class="square-text">this is some subtext under an illustration
+                or an image</div>
+        </div> 
+        <div class="section">
+            <div class="square"></div>
+            <div class="square-text">this is some subtext under an illustration
+                or an image</div>
+        </div> 
+        <div class="section">
+            <div class="square"></div>
+            <div class="square-text">this is some subtext under an illustration
+                or an image</div>
+        </div> 
+        <div class="section">
+            <div class="square"></div>
+            <div class="square-text">this is some subtext under an illustration
+                or an image</div>
+        </div> 
+        </div>
     </div>
     <div class="third">
     </div>
