--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         </div>
     </div>
     <div class="third">
+        <div class="quote">This is an inspiring quote, or a testimonial from
+            a customer. Maybe it's just filling up space, or maybe people will
+            actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="author">- Thor, God of Thunder</div>
     </div>
     <div class="fourth">
     </div>
