--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
         </div>
     </div>
 
-    <footer>Copyright The Odin Project 2021</footer>
+    <footer>Copyright © The Odin Project 2021</footer>
 </body>
 </html>
