fixed the size of left container in fourth block

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
 
-            <div class="button-fourth">Sign Up</div>
+            <div class="fourth-button">Sign Up</div>
         </div>
     </div>
 
